--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <nav id="siteNav">
 <ul>
    <li id="active"><a href="index.html" class="active daddy main-node">Montaje y Mantenimiento de un ordenador de sobremesa</a></li>
-   <li><a href="introduccin_qu_es_un_ordenador_de_sobremesa.html" class="no-ch">Introducción: ¿Qué es un ordenador de sobremesa?</a></li>
+   <li><a href="qu_es_un_ordenador_de_sobremesa.html" class="no-ch">¿Qué es un ordenador de sobremesa?</a></li>
    <li><a href="componentes_principales_de_un_ordenador.html" class="no-ch">Componentes principales de un ordenador</a></li>
    <li><a href="procedimiento_de_montaje_pasos.html" class="no-ch">Procedimiento de montaje: Pasos</a></li>
    <li><a href="instalacin_del_sistema_operativo_windows.html" class="no-ch">Instalación del Sistema Operativo Windows</a></li>
@@ -37,7 +37,7 @@
 </nav>
 <div id='topPagination'>
 <nav class="pagination noprt">
-<a href="introduccin_qu_es_un_ordenador_de_sobremesa.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="qu_es_un_ordenador_de_sobremesa.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 <div id="main-wrapper">
@@ -109,7 +109,7 @@
 </div>
 <div id='bottomPagination'>
 <nav class="pagination noprt">
-<a href="introduccin_qu_es_un_ordenador_de_sobremesa.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
+<a href="qu_es_un_ordenador_de_sobremesa.html" class="next"><span>Siguiente<span> &raquo;</span></span></a>
 </nav>
 </div>
 </div>
