--- a/procedimiento_de_montaje_pasos.html
+++ b/procedimiento_de_montaje_pasos.html
@@ -23,7 +23,7 @@
 <nav id="siteNav">
 <ul>
    <li><a href="index.html" class="daddy main-node">Montaje y Mantenimiento de un ordenador de sobremesa</a></li>
-   <li><a href="introduccin_qu_es_un_ordenador_de_sobremesa.html" class="no-ch">Introducción: ¿Qué es un ordenador de sobremesa?</a></li>
+   <li><a href="qu_es_un_ordenador_de_sobremesa.html" class="no-ch">¿Qué es un ordenador de sobremesa?</a></li>
    <li><a href="componentes_principales_de_un_ordenador.html" class="no-ch">Componentes principales de un ordenador</a></li>
    <li id="active"><a href="procedimiento_de_montaje_pasos.html" class="active no-ch">Procedimiento de montaje: Pasos</a></li>
    <li><a href="instalacin_del_sistema_operativo_windows.html" class="no-ch">Instalación del Sistema Operativo Windows</a></li>
@@ -56,7 +56,7 @@
 </article>
 <article class="iDevice_wrapper textIdevice em_iDevice" id="id13">
 <div class="iDevice emphasis1" >
-<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">🛠️ Introducción: Preparándonos para montar un ordenador</h1></header>
+<header class="iDevice_header iDevice_header_noIcon"><h1 class="iDeviceTitle">🛠️ Preparándonos para montar un ordenador</h1></header>
 <div class="iDevice_inner">
 <div class="iDevice_content_wrapper">
 <div id="ta13_140_2" class="block iDevice_content">
